[project]
name = "b-tools"
version = "0.2.0"
description = ""
authors = [
    {name = "rldotai", email = "rldotai@users.noreply.github.com"},
]
readme = {file = "README.md", content-type = "text/markdown", encoding = "UTF-8"}
dependencies = ["python-magic>=0.4.22"]
requires-python = ">=3.9"
license = {text = "None"}
keywords = ["",]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: POSIX",
  "Operating System :: MacOS",
  "Operating System :: Unix",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
homepage = "https://github.com/rldotai/b-tools"

[project.scripts]
"conda-tool" = "b_tools.conda_utilities:export_env_cli"
"img2ascii" = "b_tools.img2ascii:main"

[project.optional-dependencies]
lint = [
    "black>=21.12b0",
    "isort>=5.10.1",
    "safety>=1.10.3",
    "validate-pyproject>=0.3.2",
]
dev = [
    "invoke>=1.6.0",
]
docs = [
    "sphinx>=4.3.2",
    "sphinxcontrib-kroki>=1.3.0",
    "myst-parser>=0.16.1",
]
[tool]
[tool.pdm]
[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true


[tool.pdm.dev-dependencies]
[build-system]
requires = ["pdm-pep517", "setuptools", "wheel"]
build-backend = "pdm.pep517.api"
